--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,12 +10,12 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         php: [7.2, 7.3, 7.4, 8.0, 8.1]
-        laravel: [5.8.*, 6.*, 7.*, 8.2.*, 9.*]
+        laravel: [5.8.*, 6.*, 7.*, 8.*, 9.*]
         dependency-version: [prefer-lowest, prefer-stable]
         include:
           - laravel: 9.*
             testbench: 7.*
-          - laravel: 8.2.*
+          - laravel: 8.*
             testbench: 6.*
           - laravel: 7.*
             testbench: 5.*
@@ -36,8 +36,10 @@ jobs:
             php: 8.1
           - laravel: 7.*
             php: 8.1
-          - laravel: 8.2.*
+          - laravel: 8.*
             php: 7.2
+          - laravel: 8.*
+            php: 8.1
           - laravel: 5.8.*
             php: 8.0
           - laravel: 5.8.*
