--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
+        "php": "^8.0",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "illuminate/console": "^5.0|^6.0|^7.0|^8.0|^9.0",
-        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0"
+        "illuminate/console": "^8|^9|^10.0",
+        "illuminate/support": "^8|^9|^10.0"
     },
     "autoload": {
         "psr-4": {
